finished about me section

--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
 
   <script>
-    $(document).ready(function() {
-      $.material.init();
-    });
+  $(document).ready(function() {
+    $.material.init();
+  });
   </script>
 </head>
 
@@ -91,26 +91,26 @@
           </ul>
 
           <ul class="nav hidden-xs" id="lg-menu">
-            <li id="about" class="about-active"><a href="#"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Me</a></li>
-            <hr>
-            <li id="skills"><a href="#"><i class="fa fa-wrench"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</a></li>
-            <hr>
-            <li  id="projects"><a href="#"><i class="fa fa-flask"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</a></li>
-            <hr>
-            <li id="resume"><a href="#"><i class="fa fa-clipboard"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</a></li>
-            <hr>
-            <li id="connect"><a href="#"><i class="fa fa-comments"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</a></li>
-            <hr>
+            <li id="about" class="withripple about-active active"><a href="#"><i class="fa fa-child"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Me</a></li>
+            <hr class="nomargin">
+            <li class="withripple" id="skills"><a href="#"><i class="fa fa-wrench"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</a></li>
+            <hr class="nomargin">
+            <li class="withripple" id="projects"><a href="#"><i class="fa fa-flask"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</a></li>
+            <hr class="nomargin">
+            <li class="withripple" id="resume"><a href="#"><i class="fa fa-clipboard"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</a></li>
+            <hr class="nomargin">
+            <li class="withripple" id="connect"><a href="#"><i class="fa fa-comments"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</a></li>
+            <hr class="nomargin">
           </ul>
 
 
           <!-- tiny only nav-->
           <ul class="nav visible-xs" id="xs-menu">
-            <li id="about-xs" class="about-active"><a href="#" class="text-center"><i class="fa fa-child"></i></a></li>
-            <li id="skills-xs"><a href="#" class="text-center"><i class="fa fa-wrench"></i></a></li>
-            <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i></a></li>
-            <li id="resume-xs"><a href="#" class="text-center"><i class="fa fa-clipboard"></i></a></li>
-            <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i></a></li>
+            <li id="about-xs" class="about-active"><a href="#" class="text-center"><i class="fa fa-child"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Me</span></a></li>
+            <li id="skills-xs"><a href="#" class="text-center"><i class="fa fa-wrench"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</span></a></li>
+            <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</span></a></li>
+            <li id="resume-xs"><a href="#" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
+            <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</span></a></li>
           </ul>
 
         </div>
@@ -118,33 +118,90 @@
 
         <!-- main right col -->
         <div class="column col-sm-10 col-xs-11" id="main">
-          <div class="padding">
-            <div class="contentdiv" id="aboutcontent" >
-              about
-            </div>
-            <div class="contentdiv" id="skillscontent" style="display:none;">
-              skills
-            </div>
-            <div class="contentdiv" id="projectscontent" style="display:none;">
-              projects
-            </div>
-            <div class="contentdiv" id="resumecontent" style="display:none;">
-              resume
-            </div>
-            <div class="contentdiv" id="connectcontent" style="display:none;">
-              connect
-            </div>
 
+          <!-- content for the "about me page" -->
+          <div class="contentdiv" id="aboutcontent" >
+            <div class="aboutbanner banner">
+              <div class="bannerpadding">
+                <h1>Hi, I'm Nelson.</h1>
+              </br>
+              <p class="tagline">I love building cutting-edge software and hardware projects.</p>
+            </div>
           </div>
-
-
-
-          <!-- /main -->
-
+          <div class="contentpadding">
+            <h3>Some info about me</h3>
+            <p> I'm a developer from Southern California melding my passions for programming, computer science research, and
+              electrical engineering by creating meaningful products and services. I currently attend Troy High School as a member of the class of 2015.</p>
+            <p>I love research! I've previously worked with <a href="http://csail.mit.edu" target="_blank">MIT CSAIL</a>'s <a href="http://groups.csail.mit.edu/infolab/" target="_blank">InfoLab group</a> on the <a href="http://start.csail.mit.edu/index.php" target="_blank">START project</a>,
+                and <a href="http://www2.bren.ucsb.edu/~keller/default.htm" target="_blank">UCSB's Bren School of Environmental Science and Management.</a>; my research interests are varied, and I've done both independent and supervised work in subjects ranging from brain control interfaces
+                , natural language processing, computer modeling of natural processes, and even machine learning.</p>
+            <p>Want to know more? Check out the links on the right-hand bar!</p>
+          </br>
+            <h3>Miscellaneous Tidbits</h3>
+            <p> I'm currently reading: </br>
+              <ul>
+                <li><a href="http://mitpress.mit.edu/books/introduction-algorithms" target="_blank">Introduction to Algorithms, 3rd Edition (Cormen, Leiserson, Rivest, and Stein)</a></li>
+              </ul>
+            </p>
+            <p> Music I like: <br>
+              <ul>
+                <li><a href="http://royksopp.com" target="_blank">Röyksopp</a></li>
+                <li><a href="http://lifeandtimes.com" target="_blank">Jay Z</a></li>
+                <li><a href="http://www.jmonae.com" target="_blank">Janelle Monáe</a></li>
+                <li><a href="http://kendricklamar.com" target="_blank">Kendrick Lamar</a></li>
+                <li><a href="http://muse.mu" target="_blank">Muse</a></li>
+            </ul>
+            </p>
+            <p> Bitcoin Address: <br>
+              <a href="https://www.coinbase.com/nelsonliu" target="_blank">18c6WUcgo5gJVj6QgpnH5ZX5aBhHpWSLYv</a><br></p>
+          </div>
         </div>
+
+
+        <!-- content for the skillset page -->
+
+        <div class="contentdiv" id="skillscontent" style="display:none;">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="panel panel-default">
+                <div class="panel-heading">Panel heading</div>
+                <div class="panel-body">
+                  Panel content
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="panel panel-default">
+              <div class="panel-heading">Panel heading</div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="contentdiv" id="projectscontent" style="display:none;">
+          projects
+        </div>
+        <div class="contentdiv" id="resumecontent" style="display:none;">
+          resume
+        </div>
+        <div class="contentdiv" id="connectcontent" style="display:none;">
+          connect
+        </div>
+
+
+
+
+
+        <!-- /main -->
+
       </div>
     </div>
   </div>
+</div>
 
 </body>
 
