--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
             <li id="about-xs" class="about-active"><a href="#" class="text-center"><i class="fa fa-child"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;About Me</span></a></li>
             <li id="skills-xs"><a href="#" class="text-center"><i class="fa fa-wrench"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Skills</span></a></li>
             <li id="projects-xs"><a href="#" class="text-center"><i class="fa fa-flask"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Projects</span></a></li>
-            <li id="resume-xs"><a href="#" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
             <li id="connect-xs"><a href="#" class="text-center"><i class="fa fa-comments"></i><span class="menuitemhide">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact</span></a></li>
+            <li id="resume-xs"><a href="/files/N_LIU_RESUME.pdf" target="_blank"" class="text-center"><i class="fa fa-clipboard"></i><span class="menuitemhide" >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Resume</span></a></li>
+
           </ul>
 
         </div>
